--- a/concerto/notebooks/biolog_file.ipynb
+++ b/concerto/notebooks/biolog_file.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8d6463cd-9340-4421-9df3-1f08aeb1d51b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 1. Turning Biolog data into a model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "6ec53173",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -59,7 +67,7 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "biolog_file = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/carbon_biolog.csv\")\n",
+    "biolog_file = pd.read_csv(\"concerto/concerto/memotedata/carbon_biolog.csv\")\n",
     "exchange = biolog_file[\"exchange\"]\n",
     "for reaction in exchange:\n",
     "    #print(reaction)\n",
@@ -73,7 +81,7 @@
     "#print(ractionss)\n",
     "uptakess = re.findall(r\"EX_.+\\_e\\s+(\\d\\.\\d+)\\n\", str_min_medium_csc009)\n",
     "#print(uptakess)\n",
-    "min_medium_no_carbon = pd.read_csv(\"/Users/rodr579/Library/CloudStorage/OneDrive-PNNL/venv/min_medium_csc009C-less_media.csv\")\n",
+    "min_medium_no_carbon = pd.read_csv(\"concerto/concerto/memotedata/min_medium_csc009C-less_media.csv\")\n",
     "#print(model_csc009.medium)\n",
     "min_media_dict = {}\n",
     "for i in range(len(reactionss)):\n",
@@ -116,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
